Fix sidebar nav labels overflowing

--- a/src/pane.desktop/leftpane/sidebar.desktop.css
+++ b/src/pane.desktop/leftpane/sidebar.desktop.css
@@ -235,6 +235,10 @@
   flex-shrink: 0;
 }
 
+.app-sidebar__nav-label {
+  display: none;
+}
+
 .app-sidebar__nav-icon {
   width: 20px;
   height: 20px;
